Fix margin for show-more-images trigger on mobile
On mobile screens, this "chevron" goes below the first image if it is
wide enough, so we need to provide some space between the trigger and
the post timestamp.

It doesn't affect desktop (wide) screens, since the chevron is on the
right from the image there.

--- a/styles/shared/attachments.scss
+++ b/styles/shared/attachments.scss
@@ -47,6 +47,7 @@
     text-decoration: none;
     position: relative;
     top: 2px;
+    margin-bottom: 10px;
 
     // fa-chevron-circle-right
     &:before {
